Display a joke with the domain class

--- a/src/app/joke/joke.component.html
+++ b/src/app/joke/joke.component.html
@@ -1,4 +1,4 @@
 <div class="card card-block">
-  <h4 class="card-title">Setup</h4>
-  <p class="card-text">This is a punchline</p>
+  <h4 class="card-title">{{joke.setup}}</h4>
+  <p class="card-text">{{joke.punchline}}</p>
 </div>
