Hide the punchline of a joke

--- a/src/app/joke/joke.component.html
+++ b/src/app/joke/joke.component.html
@@ -1,4 +1,4 @@
 <div class="card card-block">
   <h4 class="card-title">{{joke.setup}}</h4>
-  <p class="card-text">{{joke.punchline}}</p>
+  <p class="card-text" [hidden]=true>{{joke.punchline}}</p>
 </div>
