--- a/src/app/joke-form/joke-form.component.html
+++ b/src/app/joke-form/joke-form.component.html
@@ -6,5 +6,5 @@
   <div form-group>
     <input class="form-control" type="text" name="punchline" placeholder="Punchline">
   </div>
-  <button class="btn btn-primary" type="button">Create</button>
+  <button class="btn btn-primary" type="button" (click)="createJoke()">Create</button>
 </div>
