--- a/src/app/joke-list/joke-list.component.html
+++ b/src/app/joke-list/joke-list.component.html
@@ -1,2 +1,2 @@
-<app-joke-form></app-joke-form>
+<app-joke-form (jokeCreated)="addJoke($event)"></app-joke-form>
 <app-joke *ngFor="let j of jokes" [joke]="j"></app-joke>
