--- a/src/app/joke/joke.component.html
+++ b/src/app/joke/joke.component.html
@@ -2,4 +2,5 @@
   <h4 class="card-title">{{joke.setup}}</h4>
   <p class="card-text" [hidden]="joke.hidden">{{joke.punchline}}</p>
   <a href="#" class="btn btn-info" (click)="joke.toggle()">Tell Me!</a>
+  <a href="#" class="btn btn-danger" (click)="deleteJoke()">Delete</a>
 </div>
