--- a/src/app/joke-form/joke-form.component.html
+++ b/src/app/joke-form/joke-form.component.html
@@ -1,10 +1,12 @@
-<div class="card card-block">
-  <h4 class="card-title">Create a Joke</h4>
-  <div class="form-group">
-    <input class="form-control" type="text" name="setup" placeholder="Setup" #setup>
+<div class="card">
+  <div class="card-block">
+    <h4 class="card-title">Create a Joke</h4>
+    <div class="form-group">
+      <input class="form-control" type="text" name="setup" placeholder="Setup" #setup>
+    </div>
+    <div class="form-group">
+      <input class="form-control" type="text" name="punchline" placeholder="Punchline" #punchline>
+    </div>
+    <button class="btn btn-primary" type="button" (click)="createJoke(setup.value, punchline.value)">Create</button>
   </div>
-  <div form-group>
-    <input class="form-control" type="text" name="punchline" placeholder="Punchline" #punchline>
-  </div>
-  <button class="btn btn-primary" type="button" (click)="createJoke(setup.value, punchline.value)">Create</button>
 </div>
