--- a/src/app/joke/joke.component.html
+++ b/src/app/joke/joke.component.html
@@ -1,6 +1,8 @@
-<div class="card card-block">
-  <h4 class="card-title">{{joke.setup}}</h4>
-  <p class="card-text" [hidden]="joke.hidden">{{joke.punchline}}</p>
-  <a href="#" class="btn btn-info" (click)="joke.toggle()">Tell Me!</a>
-  <a href="#" class="btn btn-danger" (click)="deleteJoke()">Delete</a>
+<div class="card">
+  <div class=" card-block">
+    <h4 class="card-title">{{joke.setup}}</h4>
+    <p class="card-text" [hidden]="joke.hidden">{{joke.punchline}}</p>
+    <a href="#" class="btn btn-info" (click)="joke.toggle()" role="button">Tell Me!</a>
+    <a href="#" class="btn btn-danger" (click)="deleteJoke()" role="button">Delete</a>
+  </div>
 </div>
