Setup a basic form HTML
Model driven forms 1.

--- a/src/app/joke-list/joke-list.component.html
+++ b/src/app/joke-list/joke-list.component.html
@@ -1,2 +1,3 @@
+<app-model-form></app-model-form>
 <app-joke-form (jokeCreated)="addJoke($event)"></app-joke-form>
 <app-joke *ngFor="let j of jokes" [joke]="j" (jokeDeleted)="deleteJoke($event)"></app-joke>
