--- a/src/app/model-form/model-form.component.html
+++ b/src/app/model-form/model-form.component.html
@@ -14,7 +14,7 @@
     <label for="email">Email</label>
     <input class="form-control" type="text" id="email" placeholder="Email">
   </div>
-  <div class="form-control">
+  <div class="form-group">
     <label for="password">Password</label>
     <input class="form-control" type="password" id="password" placeholder="Password">
   </div>
@@ -22,6 +22,7 @@
     <label for="language">Language</label>
     <select class="form-control">
       <option value="None">Please select a language</option>
+      <option *ngFor="let lang of langs" [value]="lang">{{lang}}</option>
     </select>
   </div>
   <div class="form-group">
