--- a/src/app/model-form/model-form.component.html
+++ b/src/app/model-form/model-form.component.html
@@ -1,26 +1,26 @@
 <h3>Signup Form <small>by model-driven forms</small></h3>
-<form novalidate>
-  <fieldset>
+<form [formGroup]="myform" novalidate>
+  <fieldset formGroupName="name">
     <div class="form-group">
       <label for="firstName">First Name</label>
-      <input class="form-control" type="text" id="firstName" placeholder="First Name">
+      <input formControlName="firstName" class="form-control" type="text" id="firstName" placeholder="First Name">
     </div>
     <div class="form-group">
       <label for="lastName">Last Name</label>
-      <input class="form-control" type="text" id="lastName" placeholder="Last Name">
+      <input formControlName="lastName" class="form-control" type="text" id="lastName" placeholder="Last Name">
     </div>
   </fieldset>
   <div class="form-group">
     <label for="email">Email</label>
-    <input class="form-control" type="text" id="email" placeholder="Email">
+    <input formControlName="email" class="form-control" type="text" id="email" placeholder="Email">
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input class="form-control" type="password" id="password" placeholder="Password">
+    <input formControlName="password" class="form-control" type="password" id="password" placeholder="Password">
   </div>
   <div class="form-group">
     <label for="language">Language</label>
-    <select class="form-control">
+    <select formControlName="language" class="form-control">
       <option value="None">Please select a language</option>
       <option *ngFor="let lang of langs" [value]="lang">{{lang}}</option>
     </select>
@@ -28,4 +28,5 @@
   <div class="form-group">
     <input class="btn btn-primary" type="button" value="Submit">
   </div>
+  <pre>{{myform.value | json}}</pre>
 </form>
