--- a/src/app/model-form/model-form.component.html
+++ b/src/app/model-form/model-form.component.html
@@ -1,11 +1,17 @@
 <h3>Signup Form <small>by model-driven forms</small></h3>
 <form [formGroup]="myform" novalidate>
   <fieldset formGroupName="name">
-    <div class="form-group">
+    <div class="form-group" [ngClass]="{
+        'has-danger': firstName.invalid && firstName.dirty,
+        'has-success': firstName.invalid && firstName.dirty
+      }">
       <label for="firstName">First Name</label>
       <input formControlName="firstName" class="form-control" type="text" id="firstName" placeholder="First Name">
     </div>
-    <div class="form-group">
+    <div class="form-group" [ngClass]="{
+      'has-danger': lastName.dirty && lastName.invalid,
+      'has-success': lastName.dirty && lastName.valid
+    }">
       <label for="lastName">Last Name</label>
       <input formControlName="lastName" class="form-control" type="text" id="lastName" placeholder="Last Name">
     </div>
@@ -16,7 +22,10 @@
       'has-danger': myform.controls.email.dirty && myform.controls.email.invalid,
       'has-success': myform.controls.email.dirty && myform.controls.email.valid}">
   </div>
-  <div class="form-group">
+  <div class="form-group" [ngClass]="{
+    'has-danger': password.dirty && password.invalid,
+    'has-success': password.dirty && password.valid
+  }">
     <label for="password">Password</label>
     <input formControlName="password" class="form-control" type="password" id="password" placeholder="Password">
   </div>
