--- a/src/app/model-form/model-form.component.html
+++ b/src/app/model-form/model-form.component.html
@@ -28,6 +28,9 @@
   }">
     <label for="password">Password</label>
     <input formControlName="password" class="form-control" type="password" id="password" placeholder="Password">
+    <div class="form-control-feedback" *ngIf="password.dirty && password.invalid">
+      Field is invalid
+    </div>
   </div>
   <div class="form-group">
     <label for="language">Language</label>
