--- a/src/app/model-form/model-form.component.html
+++ b/src/app/model-form/model-form.component.html
@@ -28,8 +28,13 @@
   }">
     <label for="password">Password</label>
     <input formControlName="password" class="form-control" type="password" id="password" placeholder="Password">
-    <div class="form-control-feedback" *ngIf="password.dirty && password.invalid">
-      Field is invalid
+    <div class="form-control-feedback" *ngIf="password.errors && (password.dirty || password.touched)">
+      <div *ngIf="password.errors.required">
+        Password is required
+      </div>
+      <div *ngIf="password.errors.minlength">
+        Password must be 8 characters long or more.
+      </div>
     </div>
   </div>
   <div class="form-group">
