--- a/src/app/model-form/model-form.component.html
+++ b/src/app/model-form/model-form.component.html
@@ -1,5 +1,5 @@
 <h3>Signup Form <small>by model-driven forms</small></h3>
-<form [formGroup]="myform" novalidate>
+<form [formGroup]="myform" (ngSubmit)="onSubmit()" novalidate>
   <fieldset formGroupName="name">
     <div class="form-group" [ngClass]="{
         'has-danger': firstName.invalid && firstName.dirty,
@@ -45,7 +45,7 @@
     </select>
   </div>
   <div class="form-group">
-    <input class="btn btn-primary" type="button" value="Submit">
+    <input class="btn btn-primary" type="submit" value="Submit">
   </div>
   <pre>{{myform.value | json}}</pre>
 </form>
