--- a/src/app/reactive-model-form/reactive-model-form.component.html
+++ b/src/app/reactive-model-form/reactive-model-form.component.html
@@ -1,6 +1,6 @@
 <h3>Search box <small>by a reactive form</small></h3>
 <div class="form-group">
-  <input type="search" class="form-control" placeholder="Please enter search term">
+  <input type="search" class="form-control" placeholder="Please enter search term" [formControl]="searchField">
 </div>
 <br>
 <ul>
