Setup a form basic HTML

--- a/src/app/joke-list/joke-list.component.html
+++ b/src/app/joke-list/joke-list.component.html
@@ -1,3 +1,4 @@
+<app-template-form></app-template-form>
 <app-reactive-model-form></app-reactive-model-form>
 <app-model-form></app-model-form>
 <app-joke-form (jokeCreated)="addJoke($event)"></app-joke-form>
