--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -1,34 +1,42 @@
 <h3>Signup Form <small>by a template form</small></h3>
-<form novalidate>
-  <fieldset>
+<form #f="ngForm" novalidate>
+  <fieldset ngModelGroup="name">
     <div class="form-group">
       <label>First Name</label>
       <input type="text"
-             class="form-control">
+             class="form-control"
+             name="firstName"
+             ngModel>
     </div>
 
     <div class="form-group">
       <label>Last Name</label>
       <input type="text"
-             class="form-control">
+             class="form-control"
+             name="lastName"
+             ngModel>
     </div>
   </fieldset>
 
   <div class="form-group">
     <label>Email</label>
     <input type="email"
-           class="form-control">
+           class="form-control"
+           name="email"
+           ngModel>
   </div>
 
   <div class="form-group">
     <label>Password</label>
     <input type="password"
-           class="form-control">
+           class="form-control"
+           name="password"
+           ngModel>
   </div>
 
   <div class="form-group">
     <label>Language</label>
-    <select class="form-control">
+    <select class="form-control" name="language" ngModel>
       <option value="">Please select a language</option>
       <option *ngFor="let lang of langs"
               [value]="lang">
@@ -36,4 +44,5 @@
       </option>
     </select>
   </div>
+  <pre>{{f.value|json}}</pre>
 </form>
