--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -23,7 +23,7 @@
     <input type="email"
            class="form-control"
            name="email"
-           ngModel>
+           [(ngModel)]="email">
   </div>
 
   <div class="form-group">
