--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -6,7 +6,7 @@
       <input type="text"
              class="form-control"
              name="firstName"
-             ngModel>
+             [(ngModel)]="model.firstName">
     </div>
 
     <div class="form-group">
@@ -14,7 +14,7 @@
       <input type="text"
              class="form-control"
              name="lastName"
-             ngModel>
+             [(ngModel)]="model.lastName">
     </div>
   </fieldset>
 
