--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -18,7 +18,7 @@
     </div>
   </fieldset>
 
-  <div class="form-group">
+  <div class="form-group" [ngClass]="{'has-danger': f.form.controls.email?.invalid && (f.form.controls.email?.dirty || f.form.controls.email?.touched), 'has-success': f.form.controls.email?.valid && (f.form.controls.email?.dirty || f.form.controls.email?.touched)}">
     <label>Email</label>
     <input type="email"
            class="form-control"
