Setup basic HTML template
CORE HTTP API

--- a/src/app/http-api/http-api.component.html
+++ b/src/app/http-api/http-api.component.html
@@ -1,3 +1,20 @@
-<p>
-  http-api works!
-</p>
+<div class="row">
+  <div class="mt-1">
+    <button type="button" class="btn btn-primary">GET</button>
+    <button type="button" class="btn btn-primary">POST</button>
+    <button type="button" class="btn btn-primary">PUT</button>
+    <button type="button" class="btn btn-primary">DELETE</button>
+  </div>
+</div>
+<div class="row">
+  <div class="mt-1">
+    <button type="button" class="btn btn-secondary">As Promise</button>
+    <button type="button" class="btn btn-secondary">Error as Promise</button>
+    <button type="button" class="btn btn-secondary">Error as Observable</button>
+  </div>
+</div>
+<div class="row">
+  <div class="mt-1">
+    <button type="button" class="btn btn-secondary">With Headers</button>    
+  </div>
+</div>
