--- a/src/app/joke-list/joke-list.component.html
+++ b/src/app/joke-list/joke-list.component.html
@@ -1,3 +1,4 @@
+<app-http-api></app-http-api>
 <app-template-form></app-template-form>
 <app-reactive-model-form></app-reactive-model-form>
 <app-model-form></app-model-form>
