Perform a GET request

--- a/src/app/http-api/http-api.component.html
+++ b/src/app/http-api/http-api.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="mt-1">
-    <button type="button" class="btn btn-primary">GET</button>
+    <button type="button" class="btn btn-primary" (click)="doGET()">GET</button>
     <button type="button" class="btn btn-primary">POST</button>
     <button type="button" class="btn btn-primary">PUT</button>
     <button type="button" class="btn btn-primary">DELETE</button>
@@ -15,6 +15,6 @@
 </div>
 <div class="row">
   <div class="mt-1">
-    <button type="button" class="btn btn-secondary">With Headers</button>    
+    <button type="button" class="btn btn-danger">With Headers</button>    
   </div>
 </div>
