--- a/src/app/http-api/http-api.component.html
+++ b/src/app/http-api/http-api.component.html
@@ -3,7 +3,7 @@
     <button type="button" class="btn btn-primary" (click)="doGET()">GET</button>
     <button type="button" class="btn btn-primary">POST</button>
     <button type="button" class="btn btn-primary">PUT</button>
-    <button type="button" class="btn btn-primary">DELETE</button>
+    <button type="button" class="btn btn-primary" (click)="doDELETE()">DELETE</button>
   </div>
 </div>
 <div class="row">
