--- a/src/app/http-api/http-api.component.html
+++ b/src/app/http-api/http-api.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="mt-1">
     <button type="button" class="btn btn-primary" (click)="doGET()">GET</button>
-    <button type="button" class="btn btn-primary">POST</button>
+    <button type="button" class="btn btn-primary" (click)="doPOST()">POST</button>
     <button type="button" class="btn btn-primary">PUT</button>
     <button type="button" class="btn btn-primary" (click)="doDELETE()">DELETE</button>
   </div>
