Perform a PUT request

--- a/src/app/http-api/http-api.component.html
+++ b/src/app/http-api/http-api.component.html
@@ -2,7 +2,7 @@
   <div class="mt-1">
     <button type="button" class="btn btn-primary" (click)="doGET()">GET</button>
     <button type="button" class="btn btn-primary" (click)="doPOST()">POST</button>
-    <button type="button" class="btn btn-primary">PUT</button>
+    <button type="button" class="btn btn-primary" (click)="doPUT()">PUT</button>
     <button type="button" class="btn btn-primary" (click)="doDELETE()">DELETE</button>
   </div>
 </div>
