Perform a GET request with promises

--- a/src/app/http-api/http-api.component.html
+++ b/src/app/http-api/http-api.component.html
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
   <div class="mt-1">
-    <button type="button" class="btn btn-secondary">As Promise</button>
+    <button type="button" class="btn btn-secondary" (click)="doGETAsPromise()">As Promise</button>
     <button type="button" class="btn btn-secondary">Error as Promise</button>
     <button type="button" class="btn btn-secondary">Error as Observable</button>
   </div>
