--- a/src/app/http-api/http-api.component.html
+++ b/src/app/http-api/http-api.component.html
@@ -9,8 +9,8 @@
 <div class="row">
   <div class="mt-1">
     <button type="button" class="btn btn-secondary" (click)="doGETAsPromise()">As Promise</button>
-    <button type="button" class="btn btn-secondary">Error as Promise</button>
-    <button type="button" class="btn btn-secondary">Error as Observable</button>
+    <button type="button" class="btn btn-secondary" (click)="doGETAsPromiseError()">Error as Promise</button>
+    <button type="button" class="btn btn-secondary" (click)="doGETAsObservableError()">Error as Observable</button>
   </div>
 </div>
 <div class="row">
