Add authorization in headers

--- a/src/app/http-api/http-api.component.html
+++ b/src/app/http-api/http-api.component.html
@@ -15,6 +15,6 @@
 </div>
 <div class="row">
   <div class="mt-1">
-    <button type="button" class="btn btn-danger">With Headers</button>    
+    <button type="button" class="btn btn-danger" (click)="doGETWithHeaders()">With Headers</button>    
   </div>
 </div>
