--- a/src/app/http-promise/http-promise.component.html
+++ b/src/app/http-promise/http-promise.component.html
@@ -4,6 +4,9 @@
   </div>
   <button class="btn btn-primary" type="submit" (click)="doSearch(search.value)">Search</button>
 </form>
+<div class="text-center">
+  <p class="lead" *ngIf="loading">Loading...</p>
+</div>
 <ul class="list-group">
   <li class="list-group-item" *ngFor="let track of itunes.results">
     <img src="{{track.artworkUrl30}}" alt="Track Image">
