Use a domain model for result item

--- a/src/app/http-promise/http-promise.component.html
+++ b/src/app/http-promise/http-promise.component.html
@@ -9,7 +9,7 @@
 </div>
 <ul class="list-group">
   <li class="list-group-item" *ngFor="let track of itunes.results">
-    <img src="{{track.artworkUrl30}}" alt="Track Image">
-    <a target="_blank" href="{{track.trackViewUrl}}">{{track.trackName}}</a>
+    <img src="{{track.thumbnail}}" alt="Track Image">
+    <a target="_blank" href="{{track.link}}">{{track.name}}</a>
   </li>
 </ul>
