Create a observable search component

--- a/src/app/joke-list/joke-list.component.html
+++ b/src/app/joke-list/joke-list.component.html
@@ -1,3 +1,4 @@
+<app-http-observable></app-http-observable>
 <app-http-promise></app-http-promise>
 <app-http-api></app-http-api>
 <app-template-form></app-template-form>
