Linking two observables together 1
Using the subscribe method twice.

--- a/src/app/http-observable/http-observable.component.html
+++ b/src/app/http-observable/http-observable.component.html
@@ -1,6 +1,6 @@
 <form class="form-inline">
   <div class="form-group">
-    <input class="form-control" type="search" placeholder="Enter search string" #search>
+    <input class="form-control" type="search" placeholder="Enter search string" [formControl]="searchField" #search>
   </div>
   <button class="btn btn-primary" type="submit" (click)="doSearch(search.value)">Search</button>
 </form>
