Use JSONP with Observables

--- a/src/app/joke-list/joke-list.component.html
+++ b/src/app/joke-list/joke-list.component.html
@@ -1,3 +1,4 @@
+<app-http-jsonp></app-http-jsonp>
 <app-http-observable></app-http-observable>
 <app-http-promise></app-http-promise>
 <app-http-api></app-http-api>
