Implement search component

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,29 @@
-<p>
-  search works!
-</p>
+<form class="form-inline">
+  <div class="form-group">
+    <input type="search"
+           class="form-control"
+           placeholder="Enter search string"
+           #search>
+  </div>
+  <button type="button"
+          class="btn btn-primary"
+          (click)="doSearch(search.value)">
+    Search
+  </button>
+</form>
+
+<hr />
+
+<div class="text-center">
+  <p class="lead"
+     *ngIf="loading">Loading...</p>
+</div>
+
+<div class="list-group">
+  <a href="#"
+     class="list-group-item list-group-item-action"
+     *ngFor="let track of itunes.results">
+    <img src="{{track.thumbnail}}">
+    {{ track.name }} <span class="text-muted">by</span> {{ track.artist }}
+  </a>
+</div>
