--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,10 +2,10 @@
   <a class="navbar-brand" href="#">iTunes Search App</a>
   <ul class="navbar-nav">
     <li class="nav-item active">
-      <a class="nav-link" href="#">Home</a>
+      <a class="nav-link" href="/#/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Search</a>
+      <a class="nav-link" href="/#/search">Search</a>
     </li>
   </ul>  
 </nav>
