--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-toggleable-sm navbar-light bg-faded">
-  <a class="navbar-brand" href="#">iTunes Search App</a>
+  <a class="navbar-brand" (click)="goHome()">iTunes Search App</a>
   <ul class="navbar-nav">
     <li class="nav-item active">
-      <a class="nav-link" href="/#/">Home</a>
+      <a class="nav-link" (click)="goHome()">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/#/search">Search</a>
+      <a class="nav-link" (click)="goSearch()">Search</a>
     </li>
   </ul>  
 </nav>
