--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,10 +2,10 @@
   <a class="navbar-brand" [routerLink]="['home']">iTunes Search App</a>
   <ul class="navbar-nav">
     <li class="nav-item active">
-      <a class="nav-link" [routerLink]="['home']">Home</a>
+      <a class="nav-link" [routerLink]="['home']" [routerLinkActive]="['active']">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['search']">Search</a>
+      <a class="nav-link" [routerLink]="['search']" [routerLinkActive]="['active']">Search</a>
     </li>
   </ul>  
 </nav>
