--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-toggleable-sm navbar-light bg-faded">
   <a class="navbar-brand" [routerLink]="['home']">iTunes Search App</a>
   <ul class="navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" [routerLink]="['home']" [routerLinkActive]="['active']">Home</a>
+    <li class="nav-item " [routerLinkActive]="['active']">
+      <a class="nav-link" [routerLink]="['home']">Home</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" [routerLink]="['search']" [routerLinkActive]="['active']">Search</a>
+    <li class="nav-item" [routerLinkActive]="['active']">
+      <a class="nav-link" [routerLink]="['search']">Search</a>
     </li>
   </ul>  
 </nav>
