--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,5 +10,8 @@
     <li class="nav-item" [routerLinkActive]="['active']">
       <a class="nav-link" [routerLink]="['tryout']">Try it Out</a>
     </li>
+    <li class="nav-item" [routerLinkActive]="['active']">
+      <a class="nav-link" [routerLink]="['blog']">Blogs</a>
+    </li>
   </ul>  
 </nav>
