--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -7,7 +7,7 @@
   </div>
   <button type="button"
           class="btn btn-primary"
-          (click)="doSearch(search.value)">
+          (click)="onSearch(search.value)">
     Search
   </button>
 </form>
