--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -3,6 +3,7 @@
     <input type="search"
            class="form-control"
            placeholder="Enter search string"
+           [formControl]="searchField"
            #search>
   </div>
   <button type="button"
