Add the artist link to the search result item

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -21,7 +21,7 @@
 </div>
 
 <div class="list-group">
-  <a href="#"
+  <a [routerLink] = "['artist', track.artistId]"
      class="list-group-item list-group-item-action"
      *ngFor="let track of itunes.results">
     <img src="{{track.thumbnail}}">
