--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,4 @@
-<a [hidden]="needsLogin()">Login</a>
+<a>
+  <span *ngIf="needsLogin()">Login</span>
+  <span *ngIf="!needsLogin()">Logout</span>
+</a>
